<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onboardingViewModel"
            type="nl.rijksoverheid.en.onboarding.OnboardingViewModel" />

        <variable
            name="nextButtonClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:transitionName="appbar"
            app:liftOnScroll="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transitionGroup="true"
            android:transitionName="content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fillViewport="true"
                android:overScrollMode="ifContentScrolls"
                app:layout_constraintBottom_toTopOf="@id/consent_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/headline"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:accessibilityHeading="true"
                        android:text="@string/onboarding_privacy_policy_headline"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        app:layout_constraintBottom_toTopOf="@id/description"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:targetApi="p" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:text="@string/onboarding_privacy_policy_paragraph"
                        android:textAppearance="?attr/textAppearanceBody1"
                        app:layout_constraintBottom_toTopOf="@id/voluntary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/headline" />

                    <include
                        android:id="@+id/voluntary"
                        layout="@layout/include_enable_api_step"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        app:image="@{@drawable/ic_shield_privacy}"
                        app:itemText="@{@string/onboarding_privacy_policy_voluntary}"
                        app:layout_constraintBottom_toTopOf="@id/check_1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/description" />

                    <include
                        android:id="@+id/check_1"
                        layout="@layout/include_enable_api_step"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        app:image="@{@drawable/ic_shield_bluetooth}"
                        app:itemText="@{@string/onboarding_privacy_policy_bt_keys}"
                        app:layout_constraintBottom_toTopOf="@id/check_2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/voluntary" />

                    <include
                        android:id="@+id/check_2"
                        layout="@layout/include_enable_api_step"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        app:image="@{@drawable/ic_shield_bluetooth}"
                        app:itemText="@{@string/onboarding_privacy_policy_retention}"
                        app:layout_constraintBottom_toTopOf="@id/check_3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/check_1" />

                    <include
                        android:id="@+id/check_3"
                        layout="@layout/include_enable_api_step"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        app:image="@{@drawable/ic_shield_bluetooth}"
                        app:itemText="@{@string/onboarding_privacy_policy_data_removal}"
                        tools:text="@string/onboarding_privacy_policy_data_removal"
                        app:layout_constraintBottom_toTopOf="@id/check_4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/check_2" />

                    <include
                        android:id="@+id/check_4"
                        layout="@layout/include_enable_api_step"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        app:image="@{@drawable/ic_shield_lock}"
                        app:itemText="@{@string/onboarding_privacy_policy_identity}"
                        app:layout_constraintBottom_toTopOf="@id/check_5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/check_3" />

                    <include
                        android:id="@+id/check_5"
                        layout="@layout/include_enable_api_step"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        app:image="@{@drawable/ic_shield_lock}"
                        app:itemText="@{@string/onboarding_privacy_policy_location}"
                        app:layout_constraintBottom_toTopOf="@id/check_6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/check_4" />

                    <include
                        android:id="@+id/check_6"
                        layout="@layout/include_enable_api_step"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="16dp"
                        app:image="@{@drawable/ic_shield_bell}"
                        app:itemText="@{@string/onboarding_privacy_policy_send_alert}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/check_5" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <View
                android:layout_width="0dp"
                android:layout_height="8dp"
                android:background="@drawable/gradient_fade_out"
                app:layout_constraintBottom_toTopOf="@id/consent_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consent_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="8dp"
                android:background="@drawable/message_box_background"
                android:backgroundTint="@color/info_surface"
                android:clickable="true"
                android:focusable="true"
                android:importantForAccessibility="no"
                android:onClick="@{() -> onboardingViewModel.togglePrivacyPolicyConsent()}"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <CheckBox
                    android:id="@+id/consent_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:checked="@{onboardingViewModel.privacyPolicyConsentGiven}"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:onClick="@{() -> onboardingViewModel.togglePrivacyPolicyConsent()}"
                    app:layout_constraintBaseline_toBaselineOf="@id/consent_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/consent_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:labelFor="@id/consent_checkbox"
                    android:text="@string/onboarding_privacy_policy_consent_label"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/consent_checkbox"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:enabled="@{onboardingViewModel.privacyPolicyConsentGiven}"
                android:onClick="@{nextButtonClickListener}"
                android:text="@string/onboarding_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
